--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -57,9 +57,10 @@
                 android:layout_marginTop="15dp"/>
 
         <Button
+                android:id="@+id/google_login_button"
                 android:textColor="@color/colorWhite"
-                android:background="@drawable/btn_signin_facebook"
-                android:text="@string/signin_facebook"
+                android:background="@drawable/btn_signin_google"
+                android:text="@string/signin_google"
                 android:layout_marginLeft="20dp"
                 android:layout_marginRight="20dp"
                 android:layout_marginBottom="5dp"
@@ -67,11 +68,12 @@
                 android:layout_height="40dp"/>
 
         <Button
+                android:id="@+id/facebook_login_button"
                 android:textColor="@color/colorWhite"
-                android:background="@drawable/btn_signin_google"
-                android:layout_marginLeft="20dp"
+                android:background="@drawable/btn_signin_facebook"
                 android:layout_marginRight="20dp"
-                android:text="@string/signin_google"
+                android:layout_marginLeft="20dp"
+                android:text="@string/signin_facebook"
                 android:layout_marginBottom="5dp"
                 android:layout_width="match_parent"
                 android:layout_height="40dp"/>
