--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,6 +8,7 @@
         tools:context=".MainActivity">
 
     <android.support.v7.widget.Toolbar
+            android:id="@+id/logo_toolbar"
             android:layout_width="match_parent"
             android:layout_height="35dp">
         <RelativeLayout
@@ -19,20 +20,23 @@
                     android:layout_height="match_parent"
                     android:src="@drawable/logo_title"/>
         </RelativeLayout>
+
     </android.support.v7.widget.Toolbar>
 
     <FrameLayout
+            android:layout_above="@+id/bottom_navigation"
+            android:layout_below="@+id/logo_toolbar"
             android:id="@+id/main_content"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
-
     </FrameLayout>
+
     <android.support.design.widget.BottomNavigationView
             android:id="@+id/bottom_navigation"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
-            app:menu="@menu/bottom_navigation_item_main" >
+            app:menu="@menu/bottom_navigation_item_main">
 
     </android.support.design.widget.BottomNavigationView>
 </RelativeLayout>
