--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,6 +16,26 @@
                 android:layout_height="match_parent">
 
             <ImageView
+                    android:id="@+id/toolbar_btn_back"
+                    android:src="@drawable/ic_arrow_back"
+                    android:layout_width="35dp"
+                    android:layout_height="35dp"
+                    android:layout_alignParentLeft="true"
+                    android:layout_marginRight="22dp"
+            />
+            <TextView
+                    android:id="@+id/toolbar_username"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:text="test@main.com"
+                    android:layout_centerVertical="true"
+                    android:gravity="center"
+                    android:textColor="@color/colorNavIcon"
+                    android:textSize="16sp"
+                    android:layout_toRightOf="@id/toolbar_btn_back"
+            />
+
+            <ImageView
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:src="@drawable/logo_title"/>
