--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -37,6 +37,7 @@
             />
 
             <ImageView
+                    android:id="@+id/toolbar_title_image"
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:src="@drawable/logo_title"/>
