--- a/app/src/main/res/layout/activity_add_photo.xml
+++ b/app/src/main/res/layout/activity_add_photo.xml
@@ -7,6 +7,13 @@
         android:layout_height="match_parent"
         tools:context=".AddPhotoActivity">
 
+    <ProgressBar
+            android:id="@+id/progress_bar"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:visibility="gone"
+    />
     <android.support.v7.widget.Toolbar
             android:id="@+id/my_toolbar"
             android:layout_width="match_parent"
@@ -55,5 +62,5 @@
             android:layout_below="@+id/edit_wrapper"
             android:theme="@style/ButtonStyle"
             android:text="@string/upload_image"
-            android:layout_margin="8dp" />
+            android:layout_margin="8dp"/>
 </RelativeLayout>
