--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -13,12 +13,21 @@
             android:layout_alignParentTop="true"
             android:layout_above="@+id/signin_layout"/>
 
+    <ProgressBar
+            android:id="@+id/progress_bar"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:visibility="gone"/>
+
     <LinearLayout
             android:id="@+id/signin_layout"
             android:orientation="vertical"
             android:layout_alignParentBottom="true"
+            android:gravity="bottom"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
+
 
         <android.support.design.widget.TextInputLayout
                 android:layout_marginLeft="20dp"
