--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -45,6 +45,13 @@
 
     </android.support.v7.widget.Toolbar>
 
+    <ProgressBar
+            android:id="@+id/progress_bar"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:visibility="gone" />
+
     <FrameLayout
             android:layout_above="@+id/bottom_navigation"
             android:layout_below="@+id/logo_toolbar"
@@ -58,6 +65,9 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
+            app:itemBackground="@color/colorPrimary"
+            app:itemIconTint="@color/colorNavIcon"
+            app:itemTextColor="@color/colorNavIcon"
             app:menu="@menu/bottom_navigation_item_main">
 
     </android.support.design.widget.BottomNavigationView>
