--- a/app/src/main/res/layout/fragment_alert.xml
+++ b/app/src/main/res/layout/fragment_alert.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
+<LinearLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-    <TextView
+    <android.support.v7.widget.RecyclerView
+            android:id="@+id/alarmfragment_recyclerview"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:text="alert"/>
-</android.support.constraint.ConstraintLayout>
+            android:layout_height="match_parent"></android.support.v7.widget.RecyclerView>
+</LinearLayout>
