--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -7,11 +7,12 @@
         tools:context=".LoginActivity">
 
     <ImageView
-            android:src="@drawable/logo_title"
+            android:id="@+id/logo_img"
+            android:src="@drawable/logo_login"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_above="@+id/signin_layout"
             android:layout_alignParentTop="true"
-            android:layout_above="@+id/signin_layout"/>
+            android:layout_height="200dp"/>
 
     <ProgressBar
             android:id="@+id/progress_bar"
@@ -61,8 +62,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="40dp"
                 android:layout_marginLeft="20dp"
-                android:layout_marginRight="20dp"
                 android:layout_marginBottom="35dp"
+                android:layout_marginRight="20dp"
                 android:layout_marginTop="15dp"/>
 
         <Button
@@ -83,18 +84,8 @@
                 android:layout_marginRight="20dp"
                 android:layout_marginLeft="20dp"
                 android:text="@string/signin_facebook"
-                android:layout_marginBottom="5dp"
-                android:layout_width="match_parent"
-                android:layout_height="40dp"/>
-
-        <Button
-                android:textColor="@color/colorWhite"
-                android:background="@drawable/btn_signin_twitter"
-                android:layout_marginLeft="20dp"
-                android:text="@string/signin_twitter"
-                android:layout_marginRight="20dp"
-                android:layout_width="match_parent"
                 android:layout_marginBottom="35dp"
+                android:layout_width="match_parent"
                 android:layout_height="40dp"/>
 
     </LinearLayout>
