--- a/app/src/main/res/layout/fragment_user.xml
+++ b/app/src/main/res/layout/fragment_user.xml
@@ -8,10 +8,11 @@
 
     <RelativeLayout
             android:layout_width="match_parent"
+            android:padding="5dp"
             android:layout_height="100dp">
         <ImageView
                 android:id="@+id/account_profile_image"
-                tools:src="@drawable/ic_account"
+                android:src="@drawable/ic_account"
                 android:layout_width="100dp"
                 android:layout_height="100dp"
                 android:layout_alignParentLeft="true"/>
